@@ -24,6 +24,8 @@ ChangeLog (2003.nn.nn):
     new processor speed values as well as improvements for the GHz CPU
     detection).
 - Cleanup:
+   - Changed LINUX_DEBUG to _DEBUG which is the generic define used for
+     this effort.
    - Dropped different unneeded defines in IOVersion.h
    - Dropped clean_ctlm.c, because we can use the recode tool instead.
    - Merged rdtsc.c into IOTime.cpp
